trying to fix overlap

--- a/styles/bottombar.css
+++ b/styles/bottombar.css
@@ -63,7 +63,7 @@
   font-size: 24px;
   color: white;
   text-align: left;
-  width: 50%;
+  width: 49%;
   float: left;
   margin: auto;
 }
@@ -80,7 +80,7 @@
   display: block;
   text-align: center;
   color: white;
-  width: 80%;
+  width: 100%;
   font-family: "Roboto", sans-serif;
   font-size: 19px;
 }
